# Test

./: DISCOVER_PAGE_GUIDE.md  FIXES_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  QUICK_REFERENCE.md  README.md  REAL_TRADING_IMPLEMENTATION.md  SECURITY.md  SOLANA_TRANSFORMATION_COMPLETE.md  TRADING_GUIDE.md  UI_IMPROVEMENTS_COMPLETE.md  VISUAL_TRANSFORMATION.md  WALLET_DERIVATION_TEST.md  WALLET_IMPORT_FIX.md  WEB3_INTEGRATION_STATUS.md  WORKFLOW_FIXES_PROGRESS.md  app.json  global-shim.js  metro.config.js  package-lock.json  package.json
.bolt/: prompt
app/: +not-found.tsx  _layout.tsx  alerts.tsx  buy.tsx  create-post.tsx  crew.tsx  discover.tsx  history.tsx  index.tsx  messages.tsx  nft-gallery.tsx  privacy.tsx  receive.tsx  rewards.tsx  send.tsx  settings.tsx  signature-wall.tsx  staking.tsx  swap.tsx  terms.tsx  verify-account.tsx  wallet.tsx
components/: AnimatedBalance.tsx  AppGuideModal.tsx  AssetAllocation.tsx  BotSettings.tsx  Builds.data.br  Builds.loader.js  Button.tsx  ConfirmTransactionModal.tsx  ConnectWalletModal.tsx  DawenProChart.tsx  ErrorBoundary.tsx  (+40 more)
programs/dawen-curve/: Anchor.toml  BUILD_INSTRUCTIONS.md  Cargo.toml  package.json
programs/dawen-curve/programs/dawen_curve/: Cargo.toml
programs/dawen-curve/programs/dawen_curve/src/: errors.rs  lib.rs  math.rs  state.rs
programs/dawen-curve/programs/dawen_curve/src/instructions/: buy.rs  claim_creator_reward.rs  graduate.rs  initialize_launch.rs  mod.rs  sell.rs
programs/dawen-curve/tests/: dawen_curve.ts
(+273 files in other folders)
