[workspace]
members = [
  "programs/dawen_curve"
]
resolver = "2"

[workspace.dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }

[profile.release]
opt-level = 3
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
